added grpc lesson template
